style.css
/* ... */
.col-md-6 {
    padding: 0;
}

.row {
    margin: 0;
}

.book-now-header {
    margin: 0.3rem;
    border: 2px solid white;
    width: fit-content;
    white-space: nowrap
}

.sticky-banner {
    position: sticky;
    top: 0;
    width: 100%;
    background-color: rgba(17, 72, 47, 0.9);
    text-align: center;
    font-size: 0.8em;
    z-index: 1000;
    padding-top: 0.7em;
    padding-bottom: 0.7em;
}

.sticky-banner a {
    color: white;
    /* Bright orange for the link */
    text-decoration: none;
    font-weight: bold;
}

.sticky-banner a:hover {
    text-decoration: underline;
}

.booking-button {
    /* Position */
    z-index: 1000;

    width: fit-content;
    display: inline-block;

    /* Shape & Appearance */
    background-color: rgba(17, 72, 47, 0.9);

    padding: 0.25em 1em;
    /* Generous padding for a larger touch area */
    border-radius: 50px;
    /* High radius creates the pill shape */
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
    /* Soft shadow makes it pop off the page */
    transition: transform 0.2s ease-in-out;
    /* Smooth hover effect */

    /* Text */
    text-align: center;
    font-size: 0.8em;
    font-weight: bold;
    text-transform: uppercase;

    margin-top: 0rem;
    margin-bottom: 1rem;
}

.sticky-button {
    /* Position */
    position: fixed;
    bottom: 1.5em;
    /* Increase distance from the edge slightly */
    right: 1.5em;
    /* Increase distance from the edge slightly */
    z-index: 1000;

    /* Shape & Appearance */
    background-color: rgba(17, 72, 47, 0.9);

    padding: 0.2em 0.8em;
    /* Generous padding for a larger touch area */
    border-radius: 50px;
    /* High radius creates the pill shape */
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
    /* Soft shadow makes it pop off the page */
    transition: transform 0.2s ease-in-out;
    /* Smooth hover effect */
}

/* Hover Effect */
.sticky-button:hover,
.booking-button:hover {
    background-color: #8bb28e;
    /* Subtle color change on hover */
    transform: translateY(-2px);
    /* Lifts the button slightly */
    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
    /* Larger shadow on hover */
}

.sticky-button-left {
    /* Position */
    position: fixed;
    bottom: 1.5em;
    /* Increase distance from the edge slightly */
    left: 1.5em;
    /* Increase distance from the edge slightly */
    z-index: 1000;

    /* width:  1rem; */
    height: 3.4rem;

    display: flex;
    justify-content: center;
    align-items: center;
    width: fit-content;

    /* Shape & Appearance */
    background-color: rgba(17, 72, 47, 0.9);
    padding: 0.75em 0.75em 0.75em 0.75em;
    /*Generous padding for a larger touch area */
    border-radius: 50px;
    /* High radius creates the pill shape */
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
    /* Soft shadow makes it pop off the page */
    transition: transform 0.2s ease-in-out;
    /* Smooth hover effect */
}

.sticky-button,
.sticky-button-left,
.sticky-button a,
.sticky-button p,
.sticky-button-left a,
.sticky-button-left p,
.booking-button,
.booking-button a {
    font-family: inherit;
    /* Takes the font from the body or parent */
    text-decoration: none;
    /* Removes the link underline if you want */
    color: white;
    /* Keeps the text color consistent */
    font-size: 18px;
    font-weight: bold;
    text-transform: uppercase;
}

.sticky-button-left:hover {
    background-color: #8bb28e;
    /* Subtle color change on hover */
    transform: translateY(-2px);
    /* Lifts the button slightly */
    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
    /* Larger shadow on hover */
}

video::-webkit-controls-panel,
video::-moz-controls-panel,
video:-ms-controls-panel {
    display: none;
}

.hero-video {
    position: relative;
    /* height: 100vh;
    width: 100vw; */

    overflow: hidden;

    display: flex;
    align-items: center;
    justify-content: center;

    font-family: "Playfair Display SC", serif;
    font-weight: 700;
    font-style: normal;

    color: white;

    width: 100%;
    height: 100%;
    object-fit: cover;
    aspect-ratio: 16 / 9;

}

.hero-video::after {
    /* Adjust video opacity by overlaying a black box (0 for transparent, 1 for solid black) */
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.2);
}


.hero-video video {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
    object-fit: cover;
}

.nook-hh-logo-container {
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    z-index: 1;
    /*bring text forward over video*/
    text-align: left;
}

.hh-nook-logo-container {
    margin: 10px;
    font-size: 40px;
    line-height: 0.5;
    font-family: 'Playfair Display SC', serif;
    text-align: center;
}



.logo-container {
    position: absolute;
    margin: 0;
    z-index: 1;
    /*bring text forward over video*/
    text-align: center;
    height: auto;
}

.hotel-slogan {
    font-size: 1.2rem;
    font-weight: 400;
}

.main-nav {
    display: flex;

    /* start in second half of page */
    grid-row: 1;
    grid-column-start: 2;

    /* display: flex;
    justify-content: flex-end; /* pushes hamburger to right */
    align-items: center;
    */
    /* position on the top part of the video */
    align-self: start;
    /* Position over video and content */
    z-index: 1;

    padding: 0rem 0rem;

    font-size: 1.2rem;
    color: white;
    background-color: none;
}

.main-nav ul {
    list-style: none;
    /* Remove default bullet points */
    margin: 0;
    /* Remove default margin */
    padding: 0;
    /* Remove default padding */
    /* display: grid;
    grid-template-columns: repeat(5, minmax(0, 2fr)); */
    justify-content: space-between;
}

.main-nav li {
    /* Display list items inline (horizontally)*/
    display: inline;
}
/* ... */

